# mmo

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  test_network_client.cpp
config/: server.ini  skynet.config
database/: README.md  insert_test_data.sql  player.sql
designer/: CMakeLists.txt  README.md  build.bat  build.sh
designer/excel/: achievement.csv  daily_task.csv  item.csv  main_task.csv  monthly_task.csv  player.csv  reward_config.csv  reward_item.csv  side_task.csv  skill.csv  weekly_task.csv
designer/include/excel_converter/: binary_serializer.h  excel_converter.h  excel_reader.h
designer/output/: item.db  player.db  skill.db
designer/src/: binary_serializer.cpp  excel_converter.cpp  excel_reader.cpp  main.cpp
docs/: skynet_integration.md
include/cache/: cache_manager.h  redis_connection.h  redis_pool.h
include/character/: character.h  character_lua_binding.h  character_manager.h
include/chat/: chat_lua_binding.h  chat_manager.h
include/core/: application.h  config.h  logger.h
include/db/: mysql_connection.h  mysql_pool.h
include/item/: item_lua_binding.h  item_manager.h
include/network/: connection.h  connection_manager.h  message_handler.h  message_queue.h  network_processor.h  network_server.h  proto_connection.h  proto_server.h  tcp_server.h
include/player/: player_manager.h  weapon.h
include/proto/: lua_protobuf.h  message_codec.h
include/reward/: reward_giver.h  reward_loader.h  reward_types.h
include/role/: character_lua_binding.h  character_manager.h
include/script/: lua_engine.h  lua_register.h
include/service/: game_service.h  gate_service.h  service_base.h  service_manager.h  skynet_service.h
include/task/: task_base.h  task_data.h  task_db_loader.h  task_manager.h  task_reward.h  task_types.h
include/utils/: buffer.h  json_utils.h  thread_pool.h  timer.h  timer_fixed.h  timer_new.h
lua/: main.lua  player_database_example.lua  player_manager.lua  skynet_main.lua  test_module.lua  weapon_manager.lua
lua/example/: example.lua  protobuf_example.lua
lua/service/: mmo_bridge.lua
lua/service/game1/: init.lua
lua/service/gate1/: init.lua  proto_handler.lua
proto/: CMakeLists.txt  chat.pb.cc  chat.pb.h  chat.proto  common.pb.cc  common.pb.h  common.proto  game.pb.cc  game.pb.h  game.proto  login.pb.cc  login.pb.h  login.proto  network.pb.cc  network.pb.h  network.proto  player.pb.cc  player.pb.h  player.proto  proto_lua.cpp
scripts/: build_linux.sh  build_windows.bat  download_skynet.ps1
src/: CMakeLists.txt  main.cpp
src/cache/: cache_manager.cpp  redis_connection.cpp  redis_pool.cpp
src/character/: character.cpp  character_lua_binding.cpp  character_manager.cpp
src/chat/: chat_lua_binding.cpp  chat_manager.cpp
src/core/: application.cpp  config.cpp  logger.cpp
src/db/: mysql_connection.cpp  mysql_pool.cpp
src/item/: item_lua_binding.cpp  item_manager.cpp
src/network/: connection.cpp  connection_manager.cpp  network_processor.cpp  network_server.cpp  proto_connection.cpp  proto_server.cpp  tcp_server.cpp
src/player/: player_manager.cpp  weapon.cpp
src/proto/: lua_protobuf.cpp  message_codec.cpp
src/reward/: reward_giver.cpp  reward_loader.cpp  reward_types.cpp
src/role/: character_lua_binding.cpp  character_manager.cpp
src/script/: lua_engine.cpp  lua_register.cpp
src/service/: game_service.cpp  gate_service.cpp  service_base.cpp  skynet_service.cpp
src/task/: task_base.cpp  task_db_loader.cpp  task_manager.cpp  task_reward.cpp
src/utils/: buffer.cpp  json_utils.cpp  thread_pool.cpp  timer.cpp
test_network/: CMakeLists.txt  test_network_client.cpp
